# repomap

./: .env.api.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/: README.zh-CN.md
repomap/: __init__.py  analyzer.py  cli.py  graph.py  layers.py  models.py  parser.py  repository.py
repomap_api/: __init__.py  config.py  jobs.py  main.py  schemas.py  service.py  worker.py
tests/: test_api.py  test_parser.py
web/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.jsx  page.jsx
web/app/api/analyze/: route.js
web/app/api/analyze/jobs/: route.js
web/app/api/analyze/jobs/[jobId]/: route.js
web/app/api/branches/: route.js
web/components/: graph-canvas.jsx  repo-workbench.jsx
web/lib/: api.js
