[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repograph"
version = "0.1.0"
description = "CLI tool for analyzing GitHub repositories and generating architecture maps."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Open Source Engineer" }
]
dependencies = [
  "fastapi>=0.135.1",
  "networkx>=3.2",
  "pydantic>=2.12.5",
  "rich>=13.7",
  "typer>=0.12",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
repomap = "repomap.cli:app"

[tool.setuptools.packages.find]
include = ["repomap*", "repomap_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
